Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87283

REG: Popup position changes after opening once

    XMLWordPrintable

Details

    • All
    • df33c79fb6579f94498164531777320e79c36fd5 (qt/qtquickcontrols2/dev) 5f6133aac0f11feefabc9006c9633b7f6d61f2c0 (qt/tqtc-qtquickcontrols2/tqtc/lts-5.15)

    Description

      This issue affects Components that use a Popup to display content, for example Menu and ComboBox. It becomes apparent when using the Material style.

      Steps to reproduce for ComboBox:

      1. open ComboBox
      2. close ComboBox
      3. open ComboBox again, notice that the Popup of the ComboBox is slightly y translated

      The Menu components shows a similar behavior after opening it once, with the difference that its Popup is translated in x direction.

      The issue seems to be caused by the fact that ComboBox animates the scale of its Popup.
      Fix/Workaround: by replacing the default exit animation with one that doesn't animate the scale the issue disappears.

      Most likely the fix forĀ QTBUG-84488 caused this issue.

      import QtQuick 2.15
      import QtQuick.Controls 2.15
      
      ApplicationWindow {
          width: 300
          height: 300
          visible: true
      
          ComboBox {
              model: 10
              anchors.verticalCenter: parent.verticalCenter
          }
      }
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              andysh Andy Shaw
              mleutelt Martin Leutelt
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes